--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,28 @@
+@font-face {
+    font-family: 'Chee';
+    font-style: normal;
+    font-weight: 700;
+    font-display: 'block';
+    src: url('/Cheee-Smortious.woff2') format('woff2'),
+        url('/Cheee-Smortious.woff') format('woff');
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: 'Chee', monospace;
+    font-weight: 700;
+    width: 100vw;
+    height: 100vh;
+    overflow: none;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
